application/spring-boot-todo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-todo
  labels:
    name: spring-boot-todo
    app: spring-boot-todo-app
