application/spring-boot-todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-todo-app-service
  namespace: spring-boot-todo
  labels:
    app: spring-boot-todo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spring-boot-todo-app
