application/spring-boot-todo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-todo-app-ingress
  namespace: spring-boot-todo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: spring-boot-todo.34.90.151.91.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-todo-app-service
            port:
              number: 80
